lib_LIBRARIES = libpekwm_lib.a
libpekwm_lib_a_SOURCES = Calendar.cc \
	CfgParser.cc \
	CfgParserKey.cc \
	CfgParserSource.cc \
	CfgParserVarExpander.cc \
	CfgParserVarExpanderX11.cc \
	Charset.cc \
	Compat.cc \
	Daytime.cc \
	Debug.cc \
	Geometry.cc \
	HttpClient.cc \
	Json.cc \
	Location.cc \
	Observable.cc \
	Os.cc \
	RegexString.cc \
	String.cc \
	Timeouts.cc \
	Tokenizer.cc \
	Util.cc \
	X11.cc
libpekwm_lib_a_CFLAGS = $(libcurl_CFLAGS)
