noinst_LIBRARIES = libpekwm_lib.a
libpekwm_lib_a_SOURCES = pekwm_types.hh \
			 Calendar.cc Calendar.hh \
			 CfgParser.cc CfgParser.hh \
			 CfgParserKey.cc CfgParserKey.hh \
			 CfgParserSource.cc CfgParserSource.hh \
			 CfgParserVarExpander.cc CfgParserVarExpander.hh \
			 CfgParserVarExpanderX11.cc CfgParserVarExpanderX11.hh \
			 Charset.cc Charset.hh \
			 Compat.cc Compat.hh \
			 Cond.cc Cond.hh \
			 Container.hh \
			 Daytime.cc Daytime.hh \
			 Debug.cc Debug.hh \
			 Exception.hh \
			 Geometry.cc Geometry.hh \
			 HttpClient.cc HttpClient.hh \
			 Iter.hh \
			 Json.cc Json.hh \
			 Location.cc Location.hh \
			 Mem.hh \
			 Observable.cc Observable.hh \
			 Os.cc Os.hh \
			 RegexString.cc RegexString.hh \
			 String.cc String.hh \
			 Timeouts.cc Timeouts.hh \
			 Tokenizer.cc Tokenizer.hh \
			 Types.hh \
			 Util.cc Util.hh \
			 X11.cc X11.hh
libpekwm_lib_a_CXXFLAGS = $(LIB_CFLAGS) $(libcurl_CFLAGS)

EXTRA_DIST = CMakeLists.txt
