lib_LIBRARIES = libpekwm_tk.a
libpekwm_tk_a_SOURCES = Action.cc \
    CfgUtil.cc \
    Color.cc \
    ColorPalette.cc \
    FontHandler.cc \
    ImageHandler.cc \
    PFont.cc \
    PFontPango.cc \
    PFontPangoCairo.cc \
    PFontPangoXft.cc \
    PFontX.cc \
    PFontX11.cc \
    PFontXft.cc \
    PFontXmb.cc \
    PImage.cc \
    PImageIcon.cc \
    PImageLoaderJpeg.cc \
    PImageLoaderPng.cc \
    PImageLoaderXpm.cc \
    PTexture.cc \
    PTexturePlain.cc \
    PWinObj.cc \
    PXftColor.cc \
    Render.cc \
    TextureHandler.cc \
    Theme.cc \
    ThemeUtil.cc \
    TkButton.cc \
    TkButtonRow.cc \
    TkText.cc \
    X11App.cc \
    X11Util.cc
libpekwm_tk_a_CXXFLAGS = -I../lib $(xext_CFLAGS)  $(libjpeg_CFLAGS) \
	$(libpng_CFLAGS) $(xpm_CFLAGS) $(xft_LIBS) \
	$(xft_CFLAGS) $(pango_CFLAGS) $(pangocairo_CFLAGS) $(pangoxft_CFLAGS)
