noinst_LIBRARIES = libpekwm_tk.a
libpekwm_tk_a_SOURCES = Action.cc Action.hh \
			CfgUtil.cc CfgUtil.hh \
			Color.cc Color.hh \
			ColorPalette.cc ColorPalette.hh \
			FontHandler.cc FontHandler.hh \
			Handler.hh \
			ImageHandler.cc ImageHandler.hh \
			PFont.cc PFont.hh \
			PFontPango.cc PFontPango.hh \
			PFontPangoCairo.cc PFontPangoCairo.hh \
			PFontPangoXft.cc PFontPangoXft.hh \
			PFontX.cc PFontX.hh \
			PFontX11.cc PFontX11.hh \
			PFontXft.cc PFontXft.hh \
			PFontXmb.cc PFontXmb.hh \
			PImage.cc PImage.hh \
			PImageIcon.cc PImageIcon.hh \
			PImageLoaderJpeg.cc PImageLoaderJpeg.hh \
			PImageLoaderPng.cc PImageLoaderPng.hh \
			PImageLoaderXpm.cc PImageLoaderXpm.hh \
			PPixmapSurface.hh \
			PSurface.hh \
			PTexture.cc PTexture.hh \
			PTexturePlain.cc PTexturePlain.hh \
			PWinObj.cc PWinObj.hh \
			PXftColor.cc PXftColor.hh \
			Render.cc Render.hh \
			TextureHandler.cc TextureHandler.hh \
			Theme.cc Theme.hh \
			ThemeUtil.cc ThemeUtil.hh \
			TkButton.cc TkButton.hh \
			TkButtonRow.cc TkButtonRow.hh \
			TkImage.hh \
			TkText.cc TkText.hh \
			TkWidget.hh \
			X11App.cc X11App.hh \
			X11Util.cc X11Util.hh
libpekwm_tk_a_CXXFLAGS = $(LIB_CFLAGS) $(TK_CFLAGS) -I../lib

EXTRA_DIST = CMakeLists.txt
