EXTRA_DIST = CMakeLists.txt \
	     pekwm.config \
	     pekwm_themeset.config \
	     pekwm.plux \
	     pekwm_ctrl.plux \
	     pekwm_panel.plux \
	     pekwm_panel_systray.plux \
	     pekwm_screenshot.plux \
	     pekwm_theme.plux \
	     pekwm_themeset.plux \
	     test.pluxinc \
	     test_client.cc \
	     test_net_request_frame_extents.cc \
	     test_systray.cc \
	     test_transient_for.cc \
	     test_update_client_list.cc \
	     test_util.hh \
	     icons/term.png \
	     themes/with-dash/theme
