AUTOMAKE_OPTIONS = foreign

themedir = $(pkgdatadir)/themes/default
theme_DATA = theme arrow.png arrow_focus.png bottom-border.png bottom-border_unfocus.png bottom-left.png bottom-left_unfocus.png bottom-right.png bottom-right_unfocus.png button.png button_hover.png button_press.png button_unfocus.png item.png item_focus.png left-border.png left-border_unfocus.png menu-bottom.png menu-bottom_unfocus.png menuline.png right-border.png right-border_unfocus.png tab-separator.png tab-separator_unfocus.png title.png title_unfocus.png top-border.png top-border_unfocus.png top-left.png top-left_unfocus.png top-right.png top-right_unfocus.png
EXTRA_DIST = $(theme_DATA)

distclean-local:
	rm -f *\~ .\#*

